qt6/spatialaudio/gen_qambientsound.nim

import Qt6SpatialAudio_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6SpatialAudio")
{.compile("gen_qambientsound.cpp", cflags).}


type QAmbientSoundLoops* = cint
const
  QAmbientSoundInfinite* = -1
  QAmbientSoundOnce* = 1



import gen_qambientsound_types
export gen_qambientsound_types

import
  gen_qaudioengine,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qurl
export
  gen_qaudioengine,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qurl

type cQAmbientSound*{.exportc: "QAmbientSound", incompleteStruct.} = object

proc fcQAmbientSound_new(engine: pointer): ptr cQAmbientSound {.importc: "QAmbientSound_new".}
proc fcQAmbientSound_metaObject(self: pointer, ): pointer {.importc: "QAmbientSound_metaObject".}
proc fcQAmbientSound_metacast(self: pointer, param1: cstring): pointer {.importc: "QAmbientSound_metacast".}
proc fcQAmbientSound_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAmbientSound_metacall".}
proc fcQAmbientSound_tr(s: cstring): struct_miqt_string {.importc: "QAmbientSound_tr".}
proc fcQAmbientSound_setSource(self: pointer, url: pointer): void {.importc: "QAmbientSound_setSource".}
proc fcQAmbientSound_source(self: pointer, ): pointer {.importc: "QAmbientSound_source".}
proc fcQAmbientSound_loops(self: pointer, ): cint {.importc: "QAmbientSound_loops".}
proc fcQAmbientSound_setLoops(self: pointer, loops: cint): void {.importc: "QAmbientSound_setLoops".}
proc fcQAmbientSound_autoPlay(self: pointer, ): bool {.importc: "QAmbientSound_autoPlay".}
proc fcQAmbientSound_setAutoPlay(self: pointer, autoPlay: bool): void {.importc: "QAmbientSound_setAutoPlay".}
proc fcQAmbientSound_setVolume(self: pointer, volume: float32): void {.importc: "QAmbientSound_setVolume".}
proc fcQAmbientSound_volume(self: pointer, ): float32 {.importc: "QAmbientSound_volume".}
proc fcQAmbientSound_engine(self: pointer, ): pointer {.importc: "QAmbientSound_engine".}
proc fcQAmbientSound_sourceChanged(self: pointer, ): void {.importc: "QAmbientSound_sourceChanged".}
proc fQAmbientSound_connect_sourceChanged(self: pointer, slot: int) {.importc: "QAmbientSound_connect_sourceChanged".}
proc fcQAmbientSound_loopsChanged(self: pointer, ): void {.importc: "QAmbientSound_loopsChanged".}
proc fQAmbientSound_connect_loopsChanged(self: pointer, slot: int) {.importc: "QAmbientSound_connect_loopsChanged".}
proc fcQAmbientSound_autoPlayChanged(self: pointer, ): void {.importc: "QAmbientSound_autoPlayChanged".}
proc fQAmbientSound_connect_autoPlayChanged(self: pointer, slot: int) {.importc: "QAmbientSound_connect_autoPlayChanged".}
proc fcQAmbientSound_volumeChanged(self: pointer, ): void {.importc: "QAmbientSound_volumeChanged".}
proc fQAmbientSound_connect_volumeChanged(self: pointer, slot: int) {.importc: "QAmbientSound_connect_volumeChanged".}
proc fcQAmbientSound_play(self: pointer, ): void {.importc: "QAmbientSound_play".}
proc fcQAmbientSound_pause(self: pointer, ): void {.importc: "QAmbientSound_pause".}
proc fcQAmbientSound_stop(self: pointer, ): void {.importc: "QAmbientSound_stop".}
proc fcQAmbientSound_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAmbientSound_tr2".}
proc fcQAmbientSound_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAmbientSound_tr3".}
proc fQAmbientSound_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QAmbientSound_virtualbase_metaObject".}
proc fcQAmbientSound_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_metaObject".}
proc fQAmbientSound_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QAmbientSound_virtualbase_metacast".}
proc fcQAmbientSound_override_virtual_metacast(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_metacast".}
proc fQAmbientSound_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QAmbientSound_virtualbase_metacall".}
proc fcQAmbientSound_override_virtual_metacall(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_metacall".}
proc fQAmbientSound_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QAmbientSound_virtualbase_event".}
proc fcQAmbientSound_override_virtual_event(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_event".}
proc fQAmbientSound_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QAmbientSound_virtualbase_eventFilter".}
proc fcQAmbientSound_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_eventFilter".}
proc fQAmbientSound_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QAmbientSound_virtualbase_timerEvent".}
proc fcQAmbientSound_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_timerEvent".}
proc fQAmbientSound_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAmbientSound_virtualbase_childEvent".}
proc fcQAmbientSound_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_childEvent".}
proc fQAmbientSound_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAmbientSound_virtualbase_customEvent".}
proc fcQAmbientSound_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_customEvent".}
proc fQAmbientSound_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAmbientSound_virtualbase_connectNotify".}
proc fcQAmbientSound_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_connectNotify".}
proc fQAmbientSound_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAmbientSound_virtualbase_disconnectNotify".}
proc fcQAmbientSound_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAmbientSound_override_virtual_disconnectNotify".}
proc fcQAmbientSound_staticMetaObject(): pointer {.importc: "QAmbientSound_staticMetaObject".}
proc fcQAmbientSound_delete(self: pointer) {.importc: "QAmbientSound_delete".}


func init*(T: type QAmbientSound, h: ptr cQAmbientSound): QAmbientSound =
  T(h: h)
proc create*(T: type QAmbientSound, engine: gen_qaudioengine.QAudioEngine): QAmbientSound =

  QAmbientSound.init(fcQAmbientSound_new(engine.h))
proc metaObject*(self: QAmbientSound, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQAmbientSound_metaObject(self.h))

proc metacast*(self: QAmbientSound, param1: cstring): pointer =

  fcQAmbientSound_metacast(self.h, param1)

proc metacall*(self: QAmbientSound, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQAmbientSound_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QAmbientSound, s: cstring): string =

  let v_ms = fcQAmbientSound_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setSource*(self: QAmbientSound, url: gen_qurl.QUrl): void =

  fcQAmbientSound_setSource(self.h, url.h)

proc source*(self: QAmbientSound, ): gen_qurl.QUrl =

  gen_qurl.QUrl(h: fcQAmbientSound_source(self.h))

proc loops*(self: QAmbientSound, ): cint =

  fcQAmbientSound_loops(self.h)

proc setLoops*(self: QAmbientSound, loops: cint): void =

  fcQAmbientSound_setLoops(self.h, loops)

proc autoPlay*(self: QAmbientSound, ): bool =

  fcQAmbientSound_autoPlay(self.h)

proc setAutoPlay*(self: QAmbientSound, autoPlay: bool): void =

  fcQAmbientSound_setAutoPlay(self.h, autoPlay)

proc setVolume*(self: QAmbientSound, volume: float32): void =

  fcQAmbientSound_setVolume(self.h, volume)

proc volume*(self: QAmbientSound, ): float32 =

  fcQAmbientSound_volume(self.h)

proc engine*(self: QAmbientSound, ): gen_qaudioengine.QAudioEngine =

  gen_qaudioengine.QAudioEngine(h: fcQAmbientSound_engine(self.h))

proc sourceChanged*(self: QAmbientSound, ): void =

  fcQAmbientSound_sourceChanged(self.h)

proc miqt_exec_callback_QAmbientSound_sourceChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onsourceChanged*(self: QAmbientSound, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAmbientSound_connect_sourceChanged(self.h, cast[int](addr tmp[]))
proc loopsChanged*(self: QAmbientSound, ): void =

  fcQAmbientSound_loopsChanged(self.h)

proc miqt_exec_callback_QAmbientSound_loopsChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onloopsChanged*(self: QAmbientSound, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAmbientSound_connect_loopsChanged(self.h, cast[int](addr tmp[]))
proc autoPlayChanged*(self: QAmbientSound, ): void =

  fcQAmbientSound_autoPlayChanged(self.h)

proc miqt_exec_callback_QAmbientSound_autoPlayChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onautoPlayChanged*(self: QAmbientSound, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAmbientSound_connect_autoPlayChanged(self.h, cast[int](addr tmp[]))
proc volumeChanged*(self: QAmbientSound, ): void =

  fcQAmbientSound_volumeChanged(self.h)

proc miqt_exec_callback_QAmbientSound_volumeChanged(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onvolumeChanged*(self: QAmbientSound, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAmbientSound_connect_volumeChanged(self.h, cast[int](addr tmp[]))
proc play*(self: QAmbientSound, ): void =

  fcQAmbientSound_play(self.h)

proc pause*(self: QAmbientSound, ): void =

  fcQAmbientSound_pause(self.h)

proc stop*(self: QAmbientSound, ): void =

  fcQAmbientSound_stop(self.h)

proc tr2*(_: type QAmbientSound, s: cstring, c: cstring): string =

  let v_ms = fcQAmbientSound_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QAmbientSound, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQAmbientSound_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metaObject(self: QAmbientSound, ): gen_qobjectdefs.QMetaObject =


  gen_qobjectdefs.QMetaObject(h: fQAmbientSound_virtualbase_metaObject(self.h))

type QAmbientSoundmetaObjectBase* = proc(): gen_qobjectdefs.QMetaObject
proc onmetaObject*(self: QAmbientSound, slot: proc(super: QAmbientSoundmetaObjectBase): gen_qobjectdefs.QMetaObject) =
  # TODO check subclass
  type Cb = proc(super: QAmbientSoundmetaObjectBase): gen_qobjectdefs.QMetaObject
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQAmbientSound_override_virtual_metaObject(self.h, cast[int](addr tmp[]))
